--- a/src/Powerlifting Data Visualization.ipynb
+++ b/src/Powerlifting Data Visualization.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,78 +107,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                          Date             Exercise  Reps  Weight(lbs)         1RM\n",
-      "16   2020-07-10 20:40:13+00:00  Barbell Bench Press   5.0        205.0  235.632184\n",
-      "113  2020-07-07 16:23:00+00:00  Barbell Bench Press   1.0        245.0  245.000000\n",
-      "172  2020-07-03 22:04:00+00:00  Barbell Bench Press  10.0        165.0  222.972973\n",
-      "249  2020-06-30 22:38:00+00:00  Barbell Bench Press   3.0        225.0  244.565217\n",
-      "254  2020-06-30 00:02:25+00:00  Barbell Bench Press  10.0        140.0  189.189189\n",
-      "286  2020-06-27 04:51:00+00:00  Barbell Bench Press   1.0        225.0  225.000000\n",
-      "300  2020-06-24 03:36:00+00:00  Barbell Bench Press   8.0        165.0  208.860759\n",
-      "354  2020-06-19 21:54:00+00:00  Barbell Bench Press   4.0        205.0  230.337079\n",
-      "435  2020-06-16 22:38:00+00:00  Barbell Bench Press   7.0        175.0  216.049383\n",
-      "535  2020-06-12 10:00:00+00:00  Barbell Bench Press   8.0        185.0  234.177215\n",
-      "584  2020-06-11 06:17:00+00:00  Barbell Bench Press   8.0        185.0  234.177215\n",
-      "592  2020-06-10 14:10:00+00:00  Barbell Bench Press   1.0        245.0  245.000000\n",
-      "706  2020-05-26 20:00:00+00:00  Barbell Bench Press   7.0        185.0  228.395062\n",
-      "759  2020-05-24 19:36:00+00:00  Barbell Bench Press   5.0        205.0  235.632184\n",
-      "772  2020-05-22 22:00:00+00:00  Barbell Bench Press   9.0        185.0  243.421053\n",
-      "782  2020-05-20 19:00:00+00:00  Barbell Bench Press   8.0        185.0  234.177215\n",
-      "848  2020-05-12 16:00:00+00:00  Barbell Bench Press   1.0        255.0  255.000000\n",
-      "906  2020-05-06 16:00:00+00:00  Barbell Bench Press   3.0        225.0  244.565217\n",
-      "918  2020-05-04 17:00:17+00:00  Barbell Bench Press   3.0        225.0  244.565217\n",
-      "948  2020-04-30 01:16:00+00:00  Barbell Bench Press  10.0        135.0  182.432432\n",
-      "1009 2020-04-20 17:09:13+00:00  Barbell Bench Press   1.0        245.0  245.000000\n",
-      "1043 2020-04-16 17:32:21+00:00  Barbell Bench Press   3.0        205.0  222.826087\n",
-      "1050 2020-04-15 17:00:00+00:00  Barbell Bench Press   3.0        205.0  222.826087\n",
-      "1057 2020-04-14 17:00:00+00:00  Barbell Bench Press   3.0        205.0  222.826087\n",
-      "1068 2020-04-13 17:00:00+00:00  Barbell Bench Press   1.0        225.0  225.000000\n",
-      "1093 2020-04-10 19:10:30+00:00  Barbell Bench Press   3.0        205.0  222.826087\n",
-      "1121 2020-04-09 17:00:00+00:00  Barbell Bench Press   5.0        185.0  212.643678\n",
-      "1145 2020-04-08 17:00:00+00:00  Barbell Bench Press   5.0        185.0  212.643678\n",
-      "1160 2020-04-07 17:00:00+00:00  Barbell Bench Press   5.0        185.0  212.643678\n",
-      "1175 2020-04-06 19:30:00+00:00  Barbell Bench Press   5.0        185.0  212.643678\n",
-      "1214 2020-04-02 23:03:39+00:00  Barbell Bench Press   4.0        225.0  252.808989\n",
-      "1293 2020-03-22 01:22:33+00:00  Barbell Bench Press  10.0        135.0  182.432432\n",
-      "1337 2020-03-17 15:07:33+00:00  Barbell Bench Press   1.0        225.0  225.000000\n",
-      "1438 2020-03-10 16:44:18+00:00  Barbell Bench Press   3.0        200.0  217.391304\n",
-      "1585 2020-03-03 22:25:41+00:00  Barbell Bench Press   3.0        195.0  211.956522\n",
-      "1690 2020-02-25 19:42:23+00:00  Barbell Bench Press   5.0        185.0  212.643678\n",
-      "1799 2020-02-19 01:37:17+00:00  Barbell Bench Press   6.0        185.0  220.238095\n",
-      "1910 2020-02-12 01:35:11+00:00  Barbell Bench Press   2.0        225.0  234.375000\n",
-      "2033 2020-02-04 17:02:41+00:00  Barbell Bench Press   5.0        135.0  155.172414\n",
-      "2171 2020-01-28 14:33:19+00:00  Barbell Bench Press   2.0        225.0  234.375000\n",
-      "2215 2020-01-24 15:38:51+00:00  Barbell Bench Press   8.0        165.0  208.860759\n",
-      "2295 2020-01-21 14:48:37+00:00  Barbell Bench Press   1.0        235.0  235.000000\n",
-      "2427 2020-01-14 14:35:03+00:00  Barbell Bench Press  10.0        135.0  182.432432\n",
-      "2517 2020-01-09 17:11:36+00:00  Barbell Bench Press   8.0        155.0  196.202532\n",
-      "2603 2020-01-06 21:24:19+00:00  Barbell Bench Press   3.0        185.0  201.086957\n",
-      "2756 2019-12-31 17:22:17+00:00  Barbell Bench Press   6.0        155.0  184.523810\n",
-      "2804 2019-12-24 17:37:52+00:00  Barbell Bench Press   1.0        215.0  215.000000\n",
-      "2980 2019-12-17 00:18:07+00:00  Barbell Bench Press   3.0        195.0  211.956522\n",
-      "5223 2019-09-27 23:59:32+00:00  Barbell Bench Press   1.0        205.0  205.000000\n",
-      "5287 2019-09-24 13:13:12+00:00  Barbell Bench Press   6.0        155.0  184.523810\n",
-      "5400 2019-09-20 19:47:31+00:00  Barbell Bench Press   1.0        205.0  205.000000\n",
-      "5530 2019-09-17 17:30:01+00:00  Barbell Bench Press   6.0        155.0  184.523810\n",
-      "5751 2019-09-10 12:45:42+00:00  Barbell Bench Press   6.0        155.0  184.523810\n",
-      "5967 2019-09-03 12:55:02+00:00  Barbell Bench Press   6.0        155.0  184.523810\n",
-      "6191 2019-08-27 13:25:42+00:00  Barbell Bench Press   5.0        155.0  178.160920\n",
-      "6420 2019-08-20 13:25:46+00:00  Barbell Bench Press   4.0        155.0  174.157303\n",
-      "6577 2019-08-13 15:37:17+00:00  Barbell Bench Press   6.0        145.0  172.619048\n",
-      "6786 2019-08-06 16:23:18+00:00  Barbell Bench Press   6.0        145.0  172.619048\n",
-      "6995 2019-07-30 21:43:28+00:00  Barbell Bench Press   4.0        145.0  162.921348\n",
-      "7209 2019-07-23 16:51:26+00:00  Barbell Bench Press   6.0        135.0  160.714286\n",
-      "7521 2019-07-16 17:48:33+00:00  Barbell Bench Press   5.0        135.0  155.172414\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_bench = df[df['Exercise'] == 'Barbell Bench Press']\n",
     "# print(df_bench.to_string())"
@@ -186,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,16 +145,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7f93872c14f0>"
+       "<matplotlib.collections.PathCollection at 0x7f8ebb1749d0>"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -244,16 +175,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7f93872522b0>"
+       "<matplotlib.collections.PathCollection at 0x7f8eb900ccd0>"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -274,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
